feat: post PS1 Hokudo no Ken
feat: post PS1 Hokudo no Ken

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -39,6 +39,9 @@
       {% endfor %}
     </ul>
   </nav>
+  <!--div class="align-items-center w-100" style="text-align: center; margin-bottom: 1rem;">
+    <a href="https://myhits.vercel.app"><img src="https://myhits.vercel.app/api/hit/https%3A%2F%2Fjjkkim88.github.io?color=gray&label=hits&size=small" alt="hits" /></a>
+  </div-->
 
   <div class="sidebar-bottom d-flex flex-wrap  align-items-center w-100">
     {% unless site.theme_mode %}
